[package]
name = "hypervisor"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
arc-swap = "0.4.8"
kvm-ioctls = { path = "../kvm-ioctls"}
kvm-bindings = { path = "../kvm-bindings", features = ["fam-wrappers"]}
lazy_static = "1.4.0"
log = "0.4"
vmm-sys-util = ">=0.10.0"
once_cell = "1.13.0"
util = { path = "../util" }