[package]
name = "machine"
version = "2.2.0"
authors = ["Huawei StratoVirt Team", "China Telecom"]
edition = "2023"
license = "Mulan PSL v2"
description = "Emulation machines"

[dependencies]
kvm-ioctls = { path = "../kvm-ioctls"}
kvm-bindings = { path = "../kvm-bindings", features = ["fam-wrappers"]}
log = "0.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vmm-sys-util = ">=0.10.0"
thiserror = "1.0"
anyhow = "1.0"
address_space = { path = "../address_space" }
boot_loader = { path = "../boot_loader" }
cpu = { path = "../cpu" }
devices = { path = "../devices" }
hypervisor = { path = "../hypervisor" }
machine_manager = { path = "../machine_manager" }
migration = { path = "../migration" }
migration_derive = { path = "../migration_derive" }
sysbus = { path = "../sysbus" }
util = { path = "../util" }
virtio = { path = "../virtio" }


[features]
default = ["qmp"]
qmp = []
boot_time = ["cpu/boot_time"]
