[package]
name = "migration"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"

[dependencies]
kvm-ioctls = { path = "../kvm-ioctls"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.13.0"
kvm-bindings = { path = "../kvm-bindings", features = ["fam-wrappers"] }
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
util = {path = "../util"}
hypervisor = { path = "../hypervisor" }
machine_manager = { path = "../machine_manager" }

[dev-dependencies]
migration_derive = { path = "../migration_derive" }
