[package]
name = "sysbus"
version = "2.2.0"
authors = ["Huawei StratoVirt Team", "China Telecom"]
edition = "2023"
license = "Mulan PSL v2"
description = "Emulate system bus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
error-chain = "0.12.4"
kvm-ioctls = { path = "../kvm-ioctls"}
vmm-sys-util = ">=0.10.0"
address_space = { path = "../address_space" }
hypervisor = { path = "../hypervisor" }