[package]
name = "util"
version = "2.2.0"
authors = ["Huawei StratoVirt Team", "China Telecom"]
edition = "2023"
license = "Mulan PSL v2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = ">=1.5.0"
thiserror = "1.0"
anyhow = "1.0"
kvm-ioctls = { path = "../kvm-ioctls"}
kvm-bindings = { path = "../kvm-bindings", features = ["fam-wrappers"]}
libc = "0.2"
log = { version = "0.4.8", features = ["std"]}
vmm-sys-util = ">=0.10.0"
byteorder = "1.4.3"
once_cell = "1.13.0"
io-uring = "0.5.7"
errno = "0.2.8"
serde = { version = "1.0", features = ["derive"] }