[package]
name = "virtio"
version = "2.2.0"
authors = ["Huawei StratoVirt Team", "China Telecom"]
edition = "2023"
license = "Mulan PSL v2"
description = "Virtio devices emulation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
byteorder = "1.4.3"
kvm-ioctls = { path = "../kvm-ioctls"}
libc = "0.2"
log = "0.4"
serde_json = "1.0"
vmm-sys-util = ">=0.10.0"
once_cell = "1.13.0"
address_space = { path = "../address_space" }
hypervisor = { path = "../hypervisor" }
machine_manager = { path = "../machine_manager" }
migration = { path = "../migration" }
migration_derive = { path = "../migration_derive" }
sysbus = { path = "../sysbus" }
devices = { path = "../devices" }
util = { path = "../util" }